# keeper

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 539ef484bc80_initial_schema.py  a1b2c3d4e5f6_align_tags_relations_to_api_spec.py  b2c3d4e5f6g7_add_pinyin_full_to_bookmarks.py
docs/: ROADMAP.md  schema.md  security-audit-report.md
scripts/: generate_certs.sh
src/: init_db.py  main.py
src/api/: __init__.py  auth.py  bookmarks.py  database.py  relations.py  schemas.py  session.py  stats.py  tags.py  transfer.py
src/crypto/: __init__.py  encryption.py  kdf.py  key_manager.py
src/db/: __init__.py  config.py  engine.py  models.py
src/middleware/: __init__.py  auth.py  rate_limit.py  security.py
tests/test_api/: test_auth.py  test_bookmarks.py  test_relations.py  test_security.py  test_stats.py  test_tags.py  test_transfer.py
tests/test_crypto/: test_encryption.py  test_kdf.py  test_key_manager.py
tests/test_db/: test_engine.py  test_init_db.py  test_models.py
tests/test_e2e/: conftest.py  test_e2e_scenarios.py
tests/test_perf/: conftest.py  test_api_performance.py  test_crypto_performance.py  test_db_performance.py
