[project]
name = "keeper"
version = "1.0.0"
description = "密码管理器后端 API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "argon2-cffi>=23.1.0",
    "cryptography>=43.0.0",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.12",
    "xpinyin>=0.7.6",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.28.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
